Fixed the responsivness and controlled the overflow

--- a/styles.css
+++ b/styles.css
@@ -10,13 +10,14 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100dvh;
 }
 main{
     padding: 72px;
     background-color: #007bff;
     width: 100%;
     height: 100%;
-    min-height: 100dvh;
+    max-height: 100dvh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -160,6 +161,7 @@ main{
 .end-window{
     background-color: white;
     display: none;
+    max-height: 100%;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -171,11 +173,14 @@ main{
 }
 
 .analysis2{
+    max-height: 90%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 1rem;
+    overflow: auto;
+    height: min-content;
 }
 .ansDiv{
     display: flex;
@@ -201,6 +206,9 @@ main{
 }
 
 @media (max-width:550px) {
+    main {
+        padding: 24px;
+    }
     .start-window{
         width: 400px;
     }
